--- a/src/owner/addStore.css
+++ b/src/owner/addStore.css
@@ -1,8 +1,42 @@
-#popupDom {
-    position: fixed;
-    left: 35%;
-    width: 540px;
-    height: 470px;
-    display: block;
-    z-index: -100;
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    width: 30%;
+}
+
+.fileInput {
+    width: 100%;
+}
+
+.signatureMenu .fileInput {
+    float: right;
+    width: 70%;
+}
+
+/* ************************************ */
+/* Backbar */
+
+a {
+    text-align: left;
+    text-decoration: none;
+    color: #e4dccf;
+}
+
+.backBar {
+    padding-left: 15px;
+    background-color: #003366;
+    height: 50px;
+}
+
+h1 {
+    margin-top: 0;
+}
+
+svg {
+    float: left;
+    margin-top: 10px;
+    font-size: 30px;
 }
