--- a/src/client/editReservation.css
+++ b/src/client/editReservation.css
@@ -22,7 +22,13 @@ svg {
 h1.title {
     margin-top: 20px;
 }
-
+table{
+    margin: 10px 0px;
+}
+th, td{
+    vertical-align : top;
+    text-align: center;
+}
 td {
     padding-right: 20px; 
 }
@@ -42,9 +48,9 @@ input.inputN {
 
 .savingButton {
     background-color: #003366;
-    height: 40px;
+    height: 20px;
     padding: 10px;
 }
-.savingButton h1 {
+.savingButton p{
     text-align: center;
 }
